Created function for donwload notes and changes in html and ts files.

--- a/FrontEnd/upload_page/home_page.html
+++ b/FrontEnd/upload_page/home_page.html
@@ -124,7 +124,7 @@
     <div class="notes_container">
       <ul id="publicNotes">
 
-        <!-- <a href="file_preview_page.html" class = "notes_lists">
+        <a href="file_preview_page.html" class = "notes_lists">
           <div class="notes_cont_box">
             <button class="favorites" data-id="${note.note_id}">Save</button>
             <button class="download_button" title="Download">Download</button>
@@ -135,7 +135,7 @@
             <img src="src/profile_notes.svg" alt="profile" class="profile">
             <p class="user_name_cont"><strong class="username">${username}</strong></p>
           </div>
-        </a> -->
+        </a>
       
       </ul>
     </div>
