--- a/FrontEnd/upload_page/myNotes.html
+++ b/FrontEnd/upload_page/myNotes.html
@@ -124,18 +124,18 @@
     <div class="notes_container">
       <ul id="myNotes">
 
-        <!-- <a href="file_preview_page.html" class = "notes_lists">
+        <a href="file_preview_page.html" class="notes_lists">
           <div class="notes_cont_box">
             <button class="favorites" data-id="${note.note_id}">Save</button>
-            <button class="download_button" title="Download">Download</button>
+            <button class="delete_button" title="Delete" data-id="${note.note_id}">Delete</button>
             <img src="src/pdf.svg" alt="file type" class="file_type_img">
             <p class="subject_cont"><strong>Subject:</strong>${subject}</p>
-            <p class ="topic_cont"><strong>Topic:</strong> ${note.topic}</p>
-            <p class = "date_cont"><strong class = "date_holder">Uploaded on:</strong> ${note.upload_date}</p>
+            <p class="topic_cont"><strong>Topic:</strong> ${note.topic}</p>
+            <p class="date_cont"><strong class="date_holder">Uploaded on:</strong> ${note.upload_date}</p>
             <img src="src/profile_notes.svg" alt="profile" class="profile">
             <p class="user_name_cont"><strong class="username">${username}</strong></p>
           </div>
-        </a> -->
+        </a>        
       
       </ul>
     </div>
