Edited FrontEnd download feature and commit new features from BackEnd

--- a/FrontEnd/upload_page/home_page.html
+++ b/FrontEnd/upload_page/home_page.html
@@ -127,7 +127,7 @@
         <a href="file_preview_page.html" class = "notes_lists">
           <div class="notes_cont_box">
             <button class="favorites" data-id="${note.note_id}">Save</button>
-            <button class="download_button" title="Download">Download</button>
+            <button class="download_button" title="Download" data-id="${note.note_id}">Download</button>
             <img src="src/pdf.svg" alt="file type" class="file_type_img">
             <p class="subject_cont"><strong>Subject:</strong>${subject}</p>
             <p class ="topic_cont"><strong>Topic:</strong> ${note.topic}</p>
