Added a categorzing and search function

--- a/FrontEnd/upload_page/home_page.html
+++ b/FrontEnd/upload_page/home_page.html
@@ -119,6 +119,7 @@
         <select id="subject_input" disabled required>
             <option value="">Select Subject</option>
         </select>
+      </form>
     </div>
 
     <div class="notes_container">
