added catcher for empty field in change username

--- a/FrontEnd/upload_page/contact.html
+++ b/FrontEnd/upload_page/contact.html
@@ -71,7 +71,7 @@
             <input type="email" id="email" placeholder="EMAIL" required />
           </div>
           <div>
-            <textarea id="message" placeholder="WHAT DO YOU HAVE IN MIND"></textarea>
+            <textarea id="message" placeholder="Type Here"></textarea>
           </div><a>
           <button id="submit_button" class="submit-btn">Submit</button> </a>
         </form>
