--- a/FrontEnd/upload_page/user_profile.html
+++ b/FrontEnd/upload_page/user_profile.html
@@ -111,6 +111,11 @@
             Saved notes
           </a>
         </div>
+        <div class="accnavbutton">
+          <a href="/" class="accnav-link">
+            Logout
+          </a>
+        </div>
       </div>
     </div>
 
