--- a/FrontEnd/upload_page/change_password.html
+++ b/FrontEnd/upload_page/change_password.html
@@ -4,28 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Change Password</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="src/change_password.css">
 </head>
 <body>
-  <h1>Change Password</h1>
+  <div>
+    <h1>Change Password</h1>
 
-  <form id="change-password-form">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required />
+    <form id="change-password-form">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
 
-    <label for="oldPassword">Old Password:</label>
-    <input type="password" id="oldPassword" name="oldPassword" required />
+      <label for="oldPassword">Old Password:</label>
+      <input type="password" id="oldPassword" name="oldPassword" required />
 
-    <label for="newPassword">New Password:</label>
-    <input type="password" id="newPassword" name="newPassword" required />
+      <label for="newPassword">New Password:</label>
+      <input type="password" id="newPassword" name="newPassword" required />
 
-    <button type="submit">Change Password</button>
-  </form>
-  <div class="return-to-profilepage">
-    <a href="user_profile.html" class="back_button">
-        Back to Profile
-    </a>
+      <button type="submit">Change Password</button>
+    </form>
+
+    <div class="return-to-profilepage">
+      <a href="user_profile.html">Back to Profile</a>
+    </div>
+
+    <div id="response-message"></div>
   </div>
-  <div id="response-message"></div>
 
   <script src="src/change-password.ts"></script>
 </body>
