revised alerts and added design

--- a/FrontEnd/upload_page/upload_notes.html
+++ b/FrontEnd/upload_page/upload_notes.html
@@ -26,16 +26,6 @@
         <div class="nav_buttons_container">
           <ul>
             <li>
-              <a href="i.html" class="i_button">
-                <!-- SVG Icon -->
-              </a>
-            </li>
-            <li>
-              <a href="notif.html" class="bell_button">
-                <!-- SVG Icon -->
-              </a>
-            </li>
-            <li>
               <a href="user_profile.html" class="user_profile">
                 <!-- SVG Icon -->
               </a>
@@ -124,6 +114,11 @@
       <label for="progress">Uploading:</label>
       <progress id="progress" value="0" max="100"></progress>
       <span id="progress-text">0%</span>
+    </div>
+
+    <!-- Successful delete notes Message -->
+    <div class="success_upload" id="upload_message" style="display: none;">
+      <h3 class="fields_message">Note shared successfully!</h3>
     </div>
 
     <script src="src/main.ts"></script>
