--- a/FrontEnd/upload_page/home_page.html
+++ b/FrontEnd/upload_page/home_page.html
@@ -106,6 +106,11 @@
       </ul>
     </div>
 
+    <!-- Successful saved notes Message -->
+    <div class="success_Save" id="success_message" style="display: none;">
+      <h3 class="fields_message">Note saved successfully!</h3>
+    </div>
+
     <script src="src/PublicNotes.ts"></script>
     <!-- <script src="src/home_page.ts"></script> -->
   </body>
